# ffmpeg-video-player

./: CMakeLists.txt  LICENSE  README.md  main.c
